# Elysia

./: .gitignore  ADDITIONAL_IMPROVEMENTS.md  ADDITIONAL_ISSUES_FOUND.md  ADVERSARIAL_SELF_LEARNING_REFACTOR.md  AI_INTEGRATION_ENHANCEMENTS.md  AI_MUTATION_VALIDATION.md  ALL_FIXES_SUMMARY.md  API_KEYS_INTEGRATION_STATUS.md  API_REFERENCE.md  API_SERVER_DOCUMENTATION.md  ARCHITECTURE_SCAN_REPORT.md  BANDAID_FIXES_NEEDED.md  BRAVE_SEARCH_INTEGRATION.md  CANONICAL_DOMAINS_IMPLEMENTATION.md  CHANGELOG.md  CHATGPT_CONVERSATIONS_SUMMARY.md  CHATGPT_DEVELOPMENT_GUIDANCE.md  CHATGPT_LATEST_RESPONSE.md  CHATGPT_PROMPT_READY.md  CHATGPT_RESPONSE_EXTRACTED.md  CHATGPT_RESPONSE_MESSAGE.md  CHATGPT_STRATEGIC_RESPONSE.md  CHATGPT_UPDATE_MESSAGE.md  CHAT_ELYSIA.bat  CHECK_ELYSIA_HEALTH.bat  CLI_IMPLEMENTATION.md  COMPLETE_ACCOMPLISHMENTS.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  CONFIGURATION_SETUP_COMPLETE.md  CONFIG_VALIDATION_COMPLETE.md  CONTROL.md  CONTROL_PANEL_ANALYSIS.md  CONTROL_PANEL_FIX.md  CONTROL_PANEL_FIXES_APPLIED.md  CONTROL_PANEL_INITIALIZATION_FIX.md  CURSOR_AGENT_INSTRUCTION.md  DASHBOARD_DIAGNOSIS.md  DASHBOARD_DIAGNOSIS_COMPLETE.md  DASHBOARD_DIAGNOSIS_VERDICT.md  (+250 more)
MUTATIONS/: .gitkeep
REPORTS/: AGENT_REPORT.md  acceptance_last.json  file_set.json  module_audit_approval_store.md  module_audit_core.md  module_audit_gateways.md  module_audit_mutation.md  module_audit_review_queue.md  module_audit_trust.md  module_audit_ui.md  repo_summary.json  review_queue.jsonl
SPEC_MODULES/: analysis.md  approval_store.md  gateways.md  mutation.md  (+3 more)
(+778 files in other folders)
